--- a/Node-Training/package.json
+++ b/Node-Training/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "shortid": "^2.2.17"
+    "mysql2": "^3.14.1",
+    "shortid": "^2.2.17",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
